crates/fluvio-connector-derive/tests/ui/sink.stderr
error: Sink Connectors are not implemented yet
 --> tests/ui/sink.rs:3:13
  |
3 | #[connector(sink)]
  |             ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/sink.rs:4:17
  |
4 | fn start_fn() {}
  |                 ^ consider adding a `main` function to `$DIR/tests/ui/sink.rs`
