crates/fluvio-connector-derive/tests/ui/sink.rs
use fluvio_connector_common::connector;

#[connector(sink)]
fn start_fn() {}
